--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lib": "."
   },
   "dependencies":{
-    "curry": "0.0.x"
+    "curry": "0.0.x",
     "d-utils": "~1.2"
   },
   "devDependencies":{
