--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ctrlflow",
-  "description": "yet another async control flow lib",
-  "version": "4.1.2",
+  "description": "mission critical ctrl flow library",
+  "version": "4.1.3",
   "homepage": "https://github.com/dominictarr/ctrlflow",
   "repository": {
     "type": "git",
